Marker graphics tuning